--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,14 @@
 
     <groupId>com.winson121.quiz</groupId>
     <artifactId>demo</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>demo</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.9.1</junit.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
